--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,5 +1,14 @@
+<html>
+<body>
 {%if name %}
 <h1>Hello {{name}}</h1>
 {%else%}
 <h1>Hello World</h1>
-{%endif%}   
+{%endif%} 
+</body>
+</html>
+
+
+
+
+   
